# middleman-mcp

./: .env.test.sample  .gitignore  .tool-versions  README.md  main.py  pyproject.toml  server.py  setup.cfg
src/middleman_mcp/: __init__.py  __main__.py  server.py
src/middleman_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/middleman_mcp/cli/: __init__.py  main.py
